apps/app-proxy/overlays/runtime-3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: runtime-3-cap-app-proxy
  namespace: runtime-3
spec:
  rules:
  - host: local.codefresh.io
    http:
      paths:
      - backend:
          service:
            name: cap-app-proxy
            port:
              number: 3017
        path: /app-proxy/
        pathType: Prefix
status:
  loadBalancer: {}
